syntax = "proto3";

package frontend;

option java_package = "ru.yandex.ci.autocheck.api";

import "ci/proto/common.proto";
import "ci/proto/autocheck/autocheck.proto";

service AutocheckService {
    //TODO удалить после перевода на общую ручку GetCiCheckInfo
    rpc GetFastTargets (GetFastTargetsRequest) returns (GetFastTargetsResponse);
    rpc GetAutocheckInfo (GetAutocheckInfoRequest) returns (GetAutocheckInfoResponse);

}

message GetFastTargetsRequest {
    ci.common.CommitId revision = 1;
    ci.common.CommitId prev_revision = 2;
}

message GetAutocheckInfoRequest {
    ci.common.CommitId revision = 1;
    ci.common.CommitId prev_revision = 2;
    string check_author = 3;
}

message GetFastTargetsResponse {
    bool fast = 1;
    Mode mode = 4;
    repeated string targets = 2;
    repeated string invalid_configs = 3;

    enum Mode {
        DISABLED = 0;
        PARALLEL = 1;
        SEQUENTIAL = 2;
    }
}

message GetAutocheckInfoResponse {
    FastMode fast_mode = 1;
    repeated string fast_targets = 2;
    repeated ci.autocheck.NativeBuild native_builds = 3 [deprecated = true];
    repeated string invalid_configs = 4;
    string pool_name = 5;

    enum FastMode {
        DISABLED = 0;
        PARALLEL = 1;
        SEQUENTIAL = 2;
    }
}
